Replaced BoardGameRender methods with OwnedBoardGameFormat usages